demo-service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2023-10-25T11:40:23Z"
  labels:
    app: demo
  name: demo
  namespace: default
  resourceVersion: "1169958"
  uid: 76381421-a855-4318-a3fc-d61213364b08
spec:
  clusterIP: 10.97.45.34
  clusterIPs:
  - 10.97.45.34
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: demo
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
