kmingress.yml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    creationTimestamp: "2023-11-10T16:20:23Z"
    generation: 1
    name: demo
    namespace: default
    resourceVersion: "3114502"
    uid: 46e03250-5e57-4a87-907a-6f83907f32ed
  spec:
    ingressClassName: nginx
    rules:
    - host: chat.tunelinux.uk
      http:
        paths:
        - backend:
            service:
              name: demo
              port:
                number: 80
          path: /
          pathType: Exact
    - host: k8s-worker1.tunelinux.uk
      http:
        paths:
        - backend:
            service:
              name: demo
              port:
                number: 80
          path: /
          pathType: Prefix

    - host: k8s-worker2.tunelinux.uk
      http:
        paths:
        - backend:
            service:
              name: demo
              port:
                number: 80
          path: /
          pathType: Prefix

  status:
    loadBalancer:
      ingress:
      - ip: 192.168.1.160


kind: List
metadata:
  resourceVersion: ""
